fix image overlapping on firefox

--- a/source/stylesheets/products.sass
+++ b/source/stylesheets/products.sass
@@ -132,18 +132,18 @@
   +transition(opacity 1s cubic-bezier(.25,.1,.25,1),transform .5s cubic-bezier(.25,.1,.25,1))
   max-width: 50%
   opacity: 0
-  padding: 6% 15px calc(30px + 6%) 15px
+  padding: 60px 15px 90px 15px
   position: relative
   width: 100%
   
   @media screen and (max-width: $break-medium)
     +flex(1 0 50%)
-    padding: 8% 10px 100px 10px
+    padding: 65px 10px 100px 10px
   
   @media screen and (max-width: $break-small)
     +flex(1)
     left: 0 !important
-    padding-bottom: 0
+    padding: 30px 10px 0 10px
     max-width: 90%
     top: 0 !important
     
